--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -6,16 +6,19 @@
     android:orientation="vertical"
     android:gravity="center"
     android:layout_height="match_parent"
+    android:background="@drawable/bg"
     tools:context=".StartActivity">
 
     <TextView
-        android:text="@string/start_activity_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="-50dp"
         android:gravity="center_horizontal"
-        android:textSize="25sp"
+        android:text="@string/start_activity_text"
+        android:textColor="@color/amber_300"
+        android:textSize="45sp"
         android:textStyle="bold"
+
         />
 
 
@@ -25,7 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="@string/register_button_text"
-        />
+
+        android:textColor="@color/amber_100" />
 
     <Button
         android:id="@+id/login"
@@ -33,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:text="@string/login_button_text"
+        android:textColor="@color/amber_100"
 
         />
 
