--- a/app/src/main/res/layout/bar_layout.xml
+++ b/app/src/main/res/layout/bar_layout.xml
@@ -2,7 +2,7 @@
 <androidx.appcompat.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/toolBar"
+    android:id="@+id/bar_layout"
     android:background="@color/blue_grey_700"
     >
 
