--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg"
     tools:context=".MessageActivity">
 
 
@@ -36,6 +37,7 @@
         android:id="@+id/recycler_view_message"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/bg"
         android:layout_below="@+id/bar_layout_message"
         android:layout_above="@id/bottom"
 
@@ -44,11 +46,12 @@
 
     <RelativeLayout
         android:id="@+id/bottom"
+        android:layout_marginBottom="85dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#fff"
-        android:padding="5dp">
+        android:background="@color/brown_400"
+        android:padding="1dp">
 
         <EditText
             android:id="@+id/text_send"
@@ -57,7 +60,9 @@
             android:layout_centerVertical="true"
             android:layout_toStartOf="@id/btn_send"
             android:layout_toLeftOf="@id/btn_send"
-            android:background="@color/amber_100" />
+            android:background="@color/brown_400"
+            android:textColor="#2FFF00"
+            android:textSize="25sp"/>
 
         <ImageButton
             android:id="@+id/btn_send"
