--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,9 +48,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login_button_text"
-            android:backgroundTint="@color/brown_600"
             android:textColor="@color/amber_300"/>
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/Forgot_you_password"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="end"
+            android:textStyle="bold"
+            android:id="@+id/forgot_password"
+            android:textColor="@color/blue_grey_500"/>
 
 
 
