--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="200dp"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
         android:layout_width="40dp"
-        android:layout_height="40dp"
-        />
+        android:layout_height="40dp" />
+
     <TextView
-        android:id="@+id/show_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/profile_image"
+        android:layout_toRightOf="@id/profile_image"
         android:layout_marginLeft="5dp"
+        android:text="hello"
+        android:id="@+id/show_message"
+        android:textSize="18sp"
         android:padding="8dp"
-        android:textSize="12sp"
-        android:textColor="@color/blue_100"
-        android:background="@drawable/background_left"
-        android:layout_toEndOf="@+id/profile_image"
-        android:layout_marginStart="5dp" />
+        android:background="@drawable/background_left"/>
+
+
+    <TextView
+        android:id="@+id/text_seen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/show_message"
+        android:visibility="gone" />
 
 </RelativeLayout>
