--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,35 +12,36 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp">
+            android:padding="8dp"
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/profile"
-                android:textColor="@color/blue_500"
-                android:textStyle="bold" />
+                android:text="Profile"
+                android:textColor="@color/brown_800"
+                android:textStyle="bold"/>
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profile_image"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:id="@+id/profile_image"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@mipmap/ic_launcher"/>
 
             <TextView
-                android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="username"
                 android:layout_below="@id/profile_image"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp"
-                android:text="@string/avatar_username"
-                android:textColor="@color/blue_500"
+                android:textColor="@color/brown_800"
+                android:textStyle="bold"
+                android:id="@+id/username"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:layout_marginBottom="20dp"/>
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
