--- a/app/src/main/res/drawable-anydpi/ic_empty_photo.xml
+++ b/app/src/main/res/drawable-anydpi/ic_empty_photo.xml
@@ -3,10 +3,9 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#9C4E07"
-    android:alpha="0.8"
-    android:autoMirrored="true">
+    android:tint="#FFC107"
+    android:alpha="0.8">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M12,4l-1.41,1.41L16.17,11H4v2h12.17l-5.58,5.59L12,20l8,-8z"/>
+      android:pathData="M12,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM12,14c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4z"/>
 </vector>
