Уведомления работают, баги исправлены

--- a/app/src/main/res/drawable/background_left.xml
+++ b/app/src/main/res/drawable/background_left.xml
@@ -7,7 +7,7 @@
         android:radius="20dp"
         android:topLeftRadius="0dp"/>
 
-    <solid android:color="@color/brown_500"/>
+    <solid android:color="#80683B17"/>
 
 
 </shape>
