--- a/app/src/main/res/drawable-anydpi/ic_action_name.xml
+++ b/app/src/main/res/drawable-anydpi/ic_action_name.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#9C4E07"
+    android:tint="#FFE082"
     android:alpha="0.8"
     android:autoMirrored="true">
   <path
