--- a/app/src/main/res/drawable/background_right.xml
+++ b/app/src/main/res/drawable/background_right.xml
@@ -5,6 +5,6 @@
     <corners
         android:radius="20dp"
         android:topRightRadius="0dp" />
-    <solid android:color="@color/blue_grey_700"/>
+    <solid android:color="#80455A64"/>
 
 </shape>
