--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -13,9 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/profile_image"
         android:layout_marginLeft="5dp"
-        android:text="hello"
+        android:textColor="@color/amber_100"
         android:id="@+id/show_message"
-        android:textSize="18sp"
+        android:textSize="14sp"
         android:padding="8dp"
         android:background="@drawable/background_left"/>
 
